# Todo-list

./: .env  .env.example  CODESTYLE.md  README.md  alembic.ini  cli_main.py  docker-compose.yml  main.py  pyproject.toml  test_db.py
app/api/: __init__.py
app/api/controllers/: project_controller.py  task_controller.py
app/api/routers/: __init__.py  project_router.py  task_router.py
app/api/schemas/request/: project_request_schema.py  task_request_schema.py
app/api/schemas/response/: project_response_schema.py  task_response_schema.py
app/commands/: autoclose_overdue.py  scheduler.py
app/db/: base.py  session.py
app/models/: orm.py  project.py  task.py
app/repositories/: sqlalchemy_storage.py
app/services/: project_service.py  task_service.py
migrations/: env.py
migrations/versions/: 928fcc3f31c3_create_projects_and_tasks_tables.py  f8afca6f6d7d_add_at_closed_to_tasks.py
todo/core/: __init__.py  exceptions.py  project.py  task.py
todo/interface/: __init__.py  cli.py
todo/storage/: __init__.py  memory_storage.py
