
[tool.poetry]
name = "todo-list"
version = "0.1.0"
description = "A Python OOP CLI ToDo List (In-Memory) built for AUT Software Engineering course."
authors = ["Tara Dalaei <taradalaei@gmail.com>"]
readme = "README.md"
packages = [{ include = "todo" }]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
